@gegcuk refactor(attempt): propagate Authentication and improve tests
        - AttemptController: inject Authentication into create/update/delete endpoints and pass authenticated username to service
        - AttemptService & AttemptServiceImpl: update method signatures to accept username parameter
        - AttemptControllerIntegrationTest & AttemptServiceImplTest: add @DisplayName annotations for better readability